--- a/tempo.html
+++ b/tempo.html
@@ -26,7 +26,7 @@
 </ul>
 </nav>
 </header>
-<section>
+<section><br><br>
 <p><big><strong><a href="Favoleggiatore.html">Indice</a></big></big></strong></center></p><br><br>
 <h3><center><big><big><strong>Modo diverso di apprezzare il tempo</strong></big></big></center></h3><br><br>
 
@@ -41,12 +41,12 @@ La marmotta, che stiravasi, sbadigliava e mezzo sonnecchiava, udì i discorsi de
 «Non t’invidiamo punto, risposero in coro gli altri due; perché non reputiamo né degno, né utile, né glorioso vegetare come facesti tu, alla maniera di una pianta. La vita ci fu data dal Creatore perché la spendessimo in operare; e se alcuni mali ne accompagnano i beni, ciò non toglie che questi non superino quelli, ed in ispecie il bene inapprezzabile della intelligenza. Noi soffrimmo ma sapemmo di vivere; tu nulla soffristi, ma rimanesti simile ad un cadavere mummificato.»</big></p><br><br><br>
 
 
-<p><big>*Questa virgola era assente nell’originale.</big></p><br><br><br>
+<p><big>* Questa virgola era assente nell’originale.</big></p><br><br><br>
 
 <p><big><strong><a href="Favoleggiatore.html">Indice</a></big></strong></center></p><br><br>
 
 </section>
-<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021 - CELEBRI VIGNOLESI<br>
+<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
 E-mail: <a href= "mailto:celebrivignolesi@hotmail.com">celebrivignolesi@hotmail.com</a><br>
 Editor: Sara Scaglioni 
