--- a/homepage.html
+++ b/homepage.html
@@ -43,6 +43,9 @@
 
 <i>La cultura è una continua, placida e fiduciosa comunione, oserei dire amicizia, coi grandi morti</i> […].<br>
 <strong>Ugo Ojetti</strong><br><br>
+  
+<i>Portiamo filiale ossequio alla memoria di tutti quegli uomini che furono benemeriti della patria, o dell'umanità. Sacre ci sieno le loro scritture, le loro immagini, le loro tombe.</i> […].<br>
+<strong>Silvio Pellico</strong><br><br>  
 
 <i>Fate che non possa essere distinto se non colui che con la persona, coll’esempio, co’ suoi lumi si è fatto conoscere uomo di merito: fate che l’uomo più probo, l’uomo più benefico, l’uomo più illuminato sieno quei che dalla pubblica opinione vengano soli distinti, ed avrete piantata la scuola della virtù</i>.<br>
 <strong>Pietro Verri</strong><br><br>
