--- a/aprile.html
+++ b/aprile.html
@@ -81,7 +81,7 @@ Durante la sua non lunga vita, trascorsa soprattutto a Reggio Emilia (all’epoc
 
 Ancora abbastanza giovane, Paradisi venne celebrato ora quale superbo versificatore “oraziano”, ora quale sommo “poeta-filosofo”, ora quale ispirato autore di odi sacre. Inoltre, egli si fece conoscere e ammirare (anche al di là delle Alpi) per la robusta eloquenza, per le eleganti traduzioni in endecasillabi sciolti di tragedie francesi sei-settecentesche di primo piano, per
 i non banali tentativi di rinnovamento del gusto teatrale ed estetico, per i penetranti studi di storia e di economia politica, per l’importante magistero universitario (di Economia Civile e di Storia Civile, a Modena) e per l’appassionato sforzo teso a mostrare la centralità delle lettere, delle scienze e delle arti nell’auspicato riscatto collettivo di un popolo italiano che, da lì a qualche tempo, si volse con sempre maggiore convinzione a riunirsi in una stessa patria.<br>
-Paradisi morì a Reggio Emilia il 19 febbraio 1783. Venne sepolto nella locale chiesa di San Domenico.<br><br>
+Paradisi morì a Reggio Emilia il 19 febbraio 1783. Venne tumulato nella locale chiesa di San Domenico.<br><br>
 Nell’immagine qui sotto, lapide apposta sul muro della rocca di Vignola (accanto al portone d’ingresso), per ricordare che il nostro personaggio nacque all’interno di essa il 26 aprile 1736.</p><br><br>
 <img src="img/celebri vignolesi/Paradisi/lapide.jpg" width="800" height="600"><br><br><br>
   <p><strong><big><center>Vuoi saperne di più su Agostino Paradisi <i>il Giovane</i>?<br>Allora, visita il suo <a href="Paradisi Agostino.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></center></strong></p><br><br><br>
