--- a/tempo.html
+++ b/tempo.html
@@ -41,7 +41,7 @@ La marmotta, che stiravasi, sbadigliava e mezzo sonnecchiava, udì i discorsi de
 «Non t’invidiamo punto, risposero in coro gli altri due; perché non reputiamo né degno, né utile, né glorioso vegetare come facesti tu, alla maniera di una pianta. La vita ci fu data dal Creatore perché la spendessimo in operare; e se alcuni mali ne accompagnano i beni, ciò non toglie che questi non superino quelli, ed in ispecie il bene inapprezzabile della intelligenza. Noi soffrimmo ma sapemmo di vivere; tu nulla soffristi, ma rimanesti simile ad un cadavere mummificato.»</big></p><br><br><br>
 
 
-<p><big>* Questa virgola era assente nell’originale.</big></p><br><br><br>
+<p><big>* Questa virgola è assente nell’originale.</big></p><br><br><br>
 
 <p><big><strong><a href="Favoleggiatore.html">Indice</a></big></strong></center></p><br><br>
 
