--- a/Novità.html
+++ b/Novità.html
@@ -44,11 +44,10 @@
 
 <p><big><big><span style="text-decoration: underline;">12 maggio 2022</span></big></big></p><br><br>
 <p><big>Il rilievo terrazzato di Santa Croce, posto a breve distanza dal borgo di Campiglio, è oggi meta o tappa di passeggiate in collina, e una volta l’anno di una processione religiosa. Ma quanti sanno che, tra l’XI e il XVIII secolo, lì esisteva una piccola chiesa? Essa, secondo una leggenda locale, nel 1630 avrebbe protetto gli abitanti di Campiglio e Tavernelle dal morbo della peste che stava allora imperversando quasi dappertutto nella Pianura Padana.<br><br>
-*Celebri Vignolesi* presenta oggi questo piccolo video amatoriale realizzato con l’intento di far conoscere le principali notizie a oggi disponibili sul colle e l’antica chiesa di Santa Croce.<br><br
-><br></big></p>
-<video width="500" height="600" controls>
+<i>Celebri Vignolesi</i> presenta oggi questo piccolo video amatoriale realizzato con l’intento di far conoscere le principali notizie a oggi disponibili sul colle e l’antica chiesa di Santa Croce.</big></p>
+<p><video width="470" height="300" controls>
     <source src="video/Santa Croce di Spagna (2022).mp4" type="video/mp4">
-</video>
+</video></p><br><br><br>
 
 <p><big><big><span style="text-decoration: underline;">03 maggio 2022</span></big></big></p><br><br>
 <p><big>Qui di seguito, presentiamo l’<i>incipit</i> di <i><strong>MODO DIVERSO DI APPREZZARE IL TEMPO</strong></i>, la settima favola di <i><strong>IL FAVOLEGGIATORE</strong></i>, raccolta pubblicata nel 1857 da FRANCESCO SELMI (1817-1881):<br>  
