--- a/Novità.html
+++ b/Novità.html
@@ -40,7 +40,7 @@
  
 <strong>GIUSEPPE MARIA SOLI</strong>, architetto, pittore, insegnante e direttore di Accademia delle Belle Arti: <strong>200 ANNI DALLA MORTE</strong>.</big></p>
 <p><big>Nell’immagine, vista della rocca di Vignola da Via Zenzano in una fotografia scattata il 4 aprile 2022.</big></p><br>
-<img src="img/FOTO VARIE/roccainfiore.JPG" width="900" height="700"><br><br><br><br><br><br> 
+<img src="img/FOTO VARIE/roccainfiore.jpg" width="900" height="700"><br><br><br><br><br><br> 
 
 <p><big><big><span style="text-decoration: underline;">12 maggio 2022</span></big></big></p><br><br>
 <p><big>Il rilievo terrazzato di Santa Croce, posto a breve distanza dal borgo di Campiglio, è oggi meta o tappa di passeggiate in collina, e una volta l’anno di una processione religiosa. Ma quanti sanno che, tra l’XI e il XVIII secolo, lì esisteva una piccola chiesa? Essa, secondo una leggenda locale, nel 1630 avrebbe protetto gli abitanti di Campiglio e Tavernelle dal morbo della peste che stava allora imperversando quasi dappertutto nella Pianura Padana.<br><br>
