--- a/asino.html
+++ b/asino.html
@@ -28,7 +28,7 @@
 </header>
 <section>
 <p><big><strong><a href="Favoleggiatore.html">Indice</a></big></big></strong></center></p><br><br>
-<h3><center><big><big><strong>Il contadino che ama l'asino</strong></big></big></center></h3><br><br>
+<h3><center><big><big><strong>Il contadino che ama l’asino</strong></big></big></center></h3><br><br>
 
 
 <p><big>Un contadino possedeva da qualche tempo un suo asino, a cui avea posto un singolare affetto, sì da considerarlo come persona a lui cara e della quale non avrebbe voluto separarsi mai più. Due o tre volte taluno gli chiese di venderlo; e fu tanto quanto farlo andar sulle furie, né più né meno che se ad un padre fosse domandata la vendita dell’unico suo figliuolino.<br>
@@ -43,8 +43,7 @@ Accadde che il primo a passare, appena avvenuta la disgrazia, fu un suo conoscen
 «Ti sei fatto male?<br>
 Non vedi – rispose l’altro – in suono di alta disperazione e rialzandosi – che sventura mi toccò!»
 «Ti compiango, e nondimeno ti avverto, che se prendi un altro asino, lo accarezzi meno e lo carichi meno. Ti svisceravi per lui in certe bazzecole inconcludenti, ma poi gli accumulavi sopra tanta roba, che fu miracolo se durò fino ad oggi.»<br>
-Oh il mio asino, il mio sventurato asino, continuò a piagnuolare il contadino; che non si corresse né ora né poi del falso costume, sicché ci perdette parecchi asini con danno della borsa e colla fama di crudele guadagnatasi nei dintorni.<br>
-
+Oh il mio asino, il mio sventurato asino, continuò a piagnuolare il contadino; che non si corresse né ora né poi del falso costume, sicché ci perdette parecchi asini con danno della borsa e colla fama di crudele guadagnatasi nei dintorni.<br><br>
 Tutto dev’essere regolato in giusta misura; bisogna trattar bene a parole non solo, ma ugualmente a fatti; i fatti sono prova che le parole non suonano vane; e dopo la prima disgrazia che tocca e serve di avvertimento è pazzo o cattivo chi si ostina a rinnovare le cagioni per cui fu colpito.</big></p><br><br><br>
 
 
