--- a/Novità.html
+++ b/Novità.html
@@ -40,7 +40,13 @@
  
 <strong>GIUSEPPE MARIA SOLI</strong>, architetto, pittore, insegnante e direttore di Accademia delle Belle Arti: <strong>200 ANNI DALLA MORTE</strong>.</big></p>
 <p><big>Nell’immagine, vista della rocca di Vignola da Via Zenzano in una fotografia scattata il 4 aprile 2022.</big></p><br>
-<img src="img/FOTO VARIE/roccainfiore.jpg" width="900" height="700"><br><br><br><br><br><br> 
+<img src="img/FOTO VARIE/rocca2.jpg" width="650" height="830"><br><br><br><br><br><br> 
+	
+<p><big><big><span style="text-decoration: underline;">18 maggio 2022</span></big></big></p><br><br>
+<p><big>Qui di seguito, presentiamo l’<i>incipit</i> di <i><strong>IL CONTADINO CHE AMA L'ASINO</strong></i>, la settima favola di <i><strong>IL FAVOLEGGIATORE</strong></i>, raccolta pubblicata nel 1857 da FRANCESCO SELMI (1817-1881):<br>  
+«Un contadino possedeva da qualche tempo un suo asino, a cui avea posto un singolare affetto, sì da considerarlo come persona a lui cara e della quale non avrebbe voluto separarsi mai più. Due o tre volte taluno gli chiese di venderlo; e fu tanto quanto farlo andar sulle furie, né più né meno che se ad un padre fosse domandata la vendita dell’unico suo figliuolino.<br> 
+Perché l’animale si cibasse d’erba fresca tenevagli nel podere un verde pratello, in sito aprico, dove potesse spaziare e strappar l’erba a sua voglia; di quando in quando imbandivagli la ghiottoneria di una buona biada di fave e crusca; non andava a sagra od a nozze che non conservassegli un pezzo di pane bianco da porgergli colla mano: e spesso compiacevasi di accarezzarlo, lisciarlo, e guardarlo con occhi amorosi.<br>  
+Per leggere integralmente questa favola, <a href="https://sarascaglioni.github.io/Celebri-Vignolesi/Favoleggiatore.html">clicca qui</a>.</big></p><br><br><br> 	
 
 <p><big><big><span style="text-decoration: underline;">12 maggio 2022</span></big></big></p><br><br>
 <p><big>Il rilievo terrazzato di Santa Croce, posto a breve distanza dal borgo di Campiglio, è oggi meta o tappa di passeggiate in collina, e una volta l’anno di una processione religiosa. Ma quanti sanno che, tra l’XI e il XVIII secolo, lì esisteva una piccola chiesa? Essa, secondo una leggenda locale, nel 1630 avrebbe protetto gli abitanti di Campiglio e Tavernelle dal morbo della peste che stava allora imperversando quasi dappertutto nella Pianura Padana.<br><br>
