--- a/Novità.html
+++ b/Novità.html
@@ -42,6 +42,16 @@
 <p><big>Nell’immagine, vista della rocca di Vignola da Via Zenzano in una fotografia scattata il 4 aprile 2022.</big></p><br>
 <img src="img/FOTO VARIE/rocca2.jpg" width="650" height="830"><br><br><br><br><br><br> 
 	
+<p><big><big><span style="text-decoration: underline;">23 maggio 2022</span></big></big></p><br><br>
+<p><big>Il 3 novembre 1885, con la benedizione di don Marcello Solieri, al tempo arciprete di Vignola e vicario foraneo, entrò in funzione l’attuale CIMITERO DI CAMPIGLIO. A sinistra, entrando, venne lasciato un breve tratto di terra non benedetta per gli «indegni di tumulazioni ecclesiastiche», gli «indigeni non battezzati» e i «bambini non battezzati». Nella cappella del nuovo camposanto, fu riconosciuto il diritto di inumare i sacerdoti parroci. Entro le mura di questo cimitero, nei decenni sono stati sepolti diversi importanti Vignolesi. In particolare, ne vanno ricordati almeno quattro, tre di nascita e uno di adozione: <strong>Aldo Santi</strong> (1881-1964), ingegnere edile ed enigmografo; <strong>Augusta Redorici Roffi</strong> (1922-2010), maestra elementare, studiosa e divulgatrice di storia locale e scienze naturali; <strong>Casimiro Bettelli</strong> (1924-1998), sacerdote, insegnante, poeta, scrittore, saggista, giornalista e collezionista d’arte; Giancarlo Dughetti (1931-1986), artista toscano (nacque a Fiesole), la cui tomba è rimasta lì fino al 2019.<br>
+Questo camposanto andò a sostituire quello creato nel 1827 lungo il cammino che dal borgo di Campiglio conduceva (e conduce ancora) a casa Mondani. Si trattava di un cimitero che mostrò fin da subito due problemi principali che lo resero ben presto inadeguato: in primo luogo, nei periodi piovosi dell’anno, il tragitto diventava letto di scorrimento di acqua e, nei mesi invernali, era spesso molto innevato; in secondo luogo, per la struttura geologica del terreno, risultava impossibile la costruzione di tombini nel terreno del camposanto. L’espurgo avvenne nel 1886.<br><br>    
+   
+Per approfondimenti su questi due cimiteri, vedi Augusta Redorici Roffi, *Le Chiese di Campiglio. Memoria*, Vignola, Libreria “dei Contrari”, 2000, pp. 128-129, con note a p. 130.<br><br>
+
+È possibile saperne di più su Aldo Santi, Augusta Redorici Roffi e Casimiro Bettelli in <a href="https://sarascaglioni.github.io/Celebri-Vignolesi/Celebri%20Vignolesi.html">Celebri Vignolesi</a>.
+</big></p><br>
+<img src="img/FOTO VARIE/cimiterocampiglio.jpg" width="700" height="550"><br><br><br>	
+	
 <p><big><big><span style="text-decoration: underline;">18 maggio 2022</span></big></big></p><br><br>
 <p><big>Qui di seguito, presentiamo l’<i>incipit</i> di <i><strong>IL CONTADINO CHE AMA L'ASINO</strong></i>, la settima favola di <i><strong>IL FAVOLEGGIATORE</strong></i>, raccolta pubblicata nel 1857 da FRANCESCO SELMI (1817-1881):<br>  
 «Un contadino possedeva da qualche tempo un suo asino, a cui avea posto un singolare affetto, sì da considerarlo come persona a lui cara e della quale non avrebbe voluto separarsi mai più. Due o tre volte taluno gli chiese di venderlo; e fu tanto quanto farlo andar sulle furie, né più né meno che se ad un padre fosse domandata la vendita dell’unico suo figliuolino.<br> 
