--- a/Novità.html
+++ b/Novità.html
@@ -40,7 +40,7 @@
  
 <strong>GIUSEPPE MARIA SOLI</strong>, architetto, pittore, insegnante e direttore di Accademia delle Belle Arti: <strong>200 ANNI DALLA MORTE</strong>.</big></p>
 <p><big>Nell’immagine, vista della rocca di Vignola da Via Zenzano in una fotografia scattata il 4 aprile 2022.</big></p><br>
-<img src="img/FOTO VARIE/rocca2.jpg" width="650" height="830"><br><br><br><br><br><br> 
+<img src="img/FOTO VARIE/rocca2.JPG" width="650" height="830"><br><br><br><br><br><br> 
 	
 <p><big><big><span style="text-decoration: underline;">23 maggio 2022</span></big></big></p><br><br>
 <p><big>Il 3 novembre 1885, con la benedizione di don Marcello Solieri, al tempo arciprete di Vignola e vicario foraneo, entrò in funzione l’attuale CIMITERO DI CAMPIGLIO. A sinistra, entrando, venne lasciato un breve tratto di terra non benedetta per gli «indegni di tumulazioni ecclesiastiche», gli «indigeni non battezzati» e i «bambini non battezzati». Nella cappella del nuovo camposanto, fu riconosciuto il diritto di inumare i sacerdoti parroci. Entro le mura di questo cimitero, nei decenni sono stati sepolti diversi importanti Vignolesi. In particolare, ne vanno ricordati almeno quattro, tre di nascita e uno di adozione: <strong>Aldo Santi</strong> (1881-1964), ingegnere edile ed enigmografo; <strong>Augusta Redorici Roffi</strong> (1922-2010), maestra elementare, studiosa e divulgatrice di storia locale e scienze naturali; <strong>Casimiro Bettelli</strong> (1924-1998), sacerdote, insegnante, poeta, scrittore, saggista, giornalista e collezionista d’arte; Giancarlo Dughetti (1931-1986), artista toscano (nacque a Fiesole), la cui tomba è rimasta lì fino al 2019.<br>
