--- a/Novità.html
+++ b/Novità.html
@@ -53,7 +53,7 @@ Per approfondimenti su questi due cimiteri, vedi Augusta Redorici Roffi, *Le Chi
 <img src="img/FOTO VARIE/cimiterocampiglio.jpg" width="700" height="550"><br><br><br>	
 	
 <p><big><big><span style="text-decoration: underline;">18 maggio 2022</span></big></big></p><br><br>
-<p><big>Qui di seguito, presentiamo l’<i>incipit</i> di <i><strong>IL CONTADINO CHE AMA L'ASINO</strong></i>, la settima favola di <i><strong>IL FAVOLEGGIATORE</strong></i>, raccolta pubblicata nel 1857 da FRANCESCO SELMI (1817-1881):<br>  
+<p><big>Qui di seguito, presentiamo l’<i>incipit</i> di <i><strong>IL CONTADINO CHE AMA L’ASINO</strong></i>, la settima favola di <i><strong>IL FAVOLEGGIATORE</strong></i>, raccolta pubblicata nel 1857 da <strong>Francesco Selmi</strong> (1817-1881):<br>  
 «Un contadino possedeva da qualche tempo un suo asino, a cui avea posto un singolare affetto, sì da considerarlo come persona a lui cara e della quale non avrebbe voluto separarsi mai più. Due o tre volte taluno gli chiese di venderlo; e fu tanto quanto farlo andar sulle furie, né più né meno che se ad un padre fosse domandata la vendita dell’unico suo figliuolino.<br> 
 Perché l’animale si cibasse d’erba fresca tenevagli nel podere un verde pratello, in sito aprico, dove potesse spaziare e strappar l’erba a sua voglia; di quando in quando imbandivagli la ghiottoneria di una buona biada di fave e crusca; non andava a sagra od a nozze che non conservassegli un pezzo di pane bianco da porgergli colla mano: e spesso compiacevasi di accarezzarlo, lisciarlo, e guardarlo con occhi amorosi.<br>  
 Per leggere integralmente questa favola, <a href="https://sarascaglioni.github.io/Celebri-Vignolesi/Favoleggiatore.html">clicca qui</a>.</big></p><br><br><br> 	
