--- a/homepage.html
+++ b/homepage.html
@@ -85,6 +85,12 @@ L’urne de’ forti</i> [...]<i>.</i><br>
 
 <i>Nascendo, si contrae verso la patria un debito immenso, che non si può mai saldare</i>.<br>
                           <strong>Montesquieu</strong><br><br>
+  
+ <i>Buon cittadino, al segno<br>  
+dove natura e i primi<br>
+casi ordinar, lo ingegno<br>
+guida così che lui la patria estimi.</i>.<br>
+                           <strong>Giuseppe Parini</strong><br><br> 
     
 <i>Nessuna cosa è più illustre che il beneficar la patria</i>.<br>
                            <strong>Salvator Rosa</strong><br><br>
