--- a/homepage.html
+++ b/homepage.html
@@ -89,7 +89,7 @@ L’urne de’ forti</i> [...]<i>.</i><br>
  <i>Buon cittadino, al segno<br>  
 dove natura e i primi<br>
 casi ordinar, lo ingegno<br>
-guida così che lui la patria estimi.</i>.<br>
+guida così che lui la patria estimi</i>.<br>
                            <strong>Giuseppe Parini</strong><br><br> 
     
 <i>Nessuna cosa è più illustre che il beneficar la patria</i>.<br>
