--- a/rosaalpi.html
+++ b/rosaalpi.html
@@ -26,7 +26,7 @@
 </ul>
 </nav>
 </header>
-<section>
+<section><br><br>
 <p><big><strong><a href="Favoleggiatore.html">Indice</a></big></strong></center></p><br><br>
 <h3><center><big><big><strong>La rosa delle alpi*</strong></big></big></center></h3><br><br>
   
@@ -40,7 +40,7 @@ La soave fragranza della rosa entrandole dentro, le si diffuse per i nervi e la 
 «Nata in luogo romito, chi poteva colà attentare alla mia casta innocenza? Però non mi trovasti armata dove non era l’uopo. Ma quì, nel tuo giardino, avrei io dovuto starmi senza un qualche segno del mio ritroso pudore, ed espormi alla taccia di svergognata, o per lo meno di cupida che qualsivoglia mano si protendesse a raccogliermi? Se la bellezza non porta scudo né insegna veruna di sue difese, e sia creduta di facile conquista, essa perde allora il suo pregio e diventa ludibrio della maldicenza, o preda della seduzione.»<br>
 La fanciulla rimase in pensiero dopo ascoltata la voce misteriosa, e si rialzò dalla nicchia, dicendo tra sé: ecco come la rosa delle Alpi, senza spine nella nativa dimora, e che se ne guarnisce nei nostri giardini, insegna a noi giovinette con quale gelosia dobbiamo custodirci sempre in timorosa verecondia.</big></p><br><br><br>
   
-<p><big>* Nell’originale, figura qui in apice il numero 2, che rimanda al testo della nota che apre Note, l’elenco delle note, verosimilmente tutte di pugno dell’Autore stesso, inserito subito dopo la fine dell’ultima favola della raccolta e subito prima dell’Indice. Ecco il testo di tale nota: «Rosa delle Alpi. Questa rosa che cresce nelle Alpi non ha spine finché sia silvestre, ma tosto le mette allorquando si trasporti nei giardini, e si coltivi.» Nell’originale, il titolo reca la forma «alpi», con la minuscola, e la minuscola è presente anche nell’Indice; dato che la forma con la maiuscola è quella corretta (e viene utilizzata nelle ultime righe della favola e nella nota appena riportata), qui abbiamo deciso di apportare questa modifica.</big></p><br><br><br>
+<p><big>* Nell’originale, figura qui in apice il numero 2, che rimanda al testo della nota che apre <i>Note</i>, l’elenco delle note, verosimilmente tutte di pugno dell’Autore stesso, inserito subito dopo la fine dell’ultima favola della raccolta e subito prima dell’<i>Indice</i>. Ecco il testo di tale nota: «Rosa delle Alpi. <i>Questa rosa che cresce nelle Alpi non ha spine finché sia silvestre, ma tosto le mette allorquando si trasporti nei giardini, e si coltivi</i>.» Nell’originale, il titolo reca la forma «alpi», con la minuscola, e la minuscola è presente anche nell’<i>Indice</i>; dato che la forma con la maiuscola è quella corretta (e viene utilizzata nelle ultime righe della favola e nella nota appena riportata), qui abbiamo deciso di apportare questa modifica.</big></p><br><br><br>
 
 <p><big><strong><a href="Favoleggiatore.html">Indice</a></big></strong></center></p><br><br>
 
