--- a/Muratori.html
+++ b/Muratori.html
@@ -81,6 +81,8 @@
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/Muratori.jpg" width="240" height="650"><br><br><br>
 <p><center><big>Ritratto di fantasia di Muratori, litografia eseguita nel 2021 da Domenico Simonini (n. 1952).<br> L’opera è stata eseguita per l’associazione Amici dell’Arte Vignola.</big></center></p>
 <img src="img/FOTO VARIE/Pippo.jpg" width="500" height="750"><br><br><br>
+<p><center><big>Facciata della Biblioteca Ambrosiana, a Milano.</big></center></p>
+<img src="img/FOTO VARIE/bibliotecaambrosiana.jpg" width="550" height="750"><br><br><br>
 <p><center><big>Facciata della chiesa di Santa Maria della Pomposa.</big></center></p>
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/facciata.jpg" width="800" height="580"><br><br>
 <p><center><big>Parte esterna dell’Aedes Muratoriana in una fotografia recente scattata in Via della Pomposa, a Modena<br> (dietro Santa Maria della Pomposa). Si tratta della casa nella quale il celebre Vignolese abitò dal 1716 al 1750.</big></center></p>
