--- a/Soli2.html
+++ b/Soli2.html
@@ -40,6 +40,8 @@
 	<img src="img/celebri vignolesi/Soli Ivo/statua.jpg" width="500" height="650"><br><br>
 <p><center><big><big>Soli intento a modellare il monumento a Carlo Porta, inaugurato nel 1966 al Verziere di Milano. Fonte: <i>Ivo Soli</i>, cit.</big></big></center><br>
 	<img src="img/celebri vignolesi/Soli Ivo/monumento.jpg" width="450" height="700"><br><br>
+<p><center><big><big>Monumento a Carlo Porta.</big></big></center><br>
+	<img src="img/FOTO VARIE/monumento.jpg" width="450" height="850"><br><br>
 <p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></big></strong></p><br>
 </section>
 <footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
