--- a/giugno.html
+++ b/giugno.html
@@ -48,7 +48,7 @@ Dal 2004 al 2006, l’intero patrimonio documentario della Biblioteca rimase ina
 
 Nel 2017, dopo poco più di un decennio di chiusura al quale erano seguiti due anni di lavori strutturali disposti e pagati dalla Fondazione di Vignola, Villa Trenti riaprì al pubblico come seconda sede ufficiale della Biblioteca. Nel corso del 2018, poi, grazie al finanziamento della Fondazione di Vignola e a contributi del Comune di Vignola e della Regione Emilia-Romagna, furono realizzati interventi di manutenzione e riorganizzazione degli spazi nell’edificio Auris.<br><br>   
 
-  Nell’immagine sottostante, la lapide in ricordo di don Rodolfi, a lungo affissa nella Biblioteca Comunale di Vignola e attualmente collocata nella Villa Tosi Bellucci (dal 1916, sede del Municipio di Vignola).</p><br><br>
+  Nell’immagine sottostante, la lapide in ricordo di don Rodolfi, a lungo affissa nella Biblioteca Comunale di Vignola e attualmente collocata nella Villa Tosi Bellucci.</p><br><br>
 <img src="img/celebri vignolesi/Rodolfi Giovanni/lapide.jpg" width="350" height="650"><br><br><br><br><br>
 
 <p class="index-p3"><strong>12 giugno 1924</strong>: nacque a Campiglio di Vignola <strong>CASIMIRO BETTELLI</strong>, sacerdote, insegnante, poeta, scrittore, saggista, giornalista e collezionista d’arte.<br><br> 
