--- a/Soli2.html
+++ b/Soli2.html
@@ -26,7 +26,7 @@
 </ul>
 </nav>
 </header>
-<section>
+<section><br>
 	<p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></big></strong></p><br><br>
 	<p><center><strong><big><big><big><big><span style="text-decoration: underline;">LA PAGINA È ATTUALMENTE IN COSTRUZIONE</span></big></big></big></big></strong></p><br><br><br>
 <h3><center><big><big>IVO SOLI</big></big><br><br>
@@ -44,8 +44,7 @@
 <p><center><big><big>Soli intento a modellare il monumento a Carlo Porta, inaugurato nel 1966 al Verziere di Milano. Fonte: <i>Ivo Soli</i>, cit.</big></big></center><br>
 	<img src="img/celebri vignolesi/Soli Ivo/monumento.jpg" width="400" height="600"><br><br>
 <p><center><big><big>Monumento a Carlo Porta, bronzo.</big></big></center><br>
-	<img src="img/FOTO VARIE/monumento.jpg" width="450" height="850"><br><br>
-	
+	<img src="img/FOTO VARIE/monumento.jpg" width="450" height="850"><br><br><br>
 <p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></big></strong></p><br>
 </section>
 <footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
