--- a/Soli2.html
+++ b/Soli2.html
@@ -41,9 +41,9 @@
 	<img src="img/celebri vignolesi/Soli Ivo/donnanera.jpg" width="500" height="600"><br><br>
 <p><center><big><big><i>Fanciulla accovacciata</i> (1945-1948), bronzo. Vignola, Via Selmi,<br> davanti alla porta di ingresso della casa natale di <strong>Lodovico Antonio Muratori</strong> (1672-1750).</big></big></center><br>
 	<img src="img/celebri vignolesi/Soli Ivo/statua.jpg" width="500" height="650"><br><br>
-<p><center><big><big>Soli intento a modellare il monumento a Carlo Porta, inaugurato nel 1966 al Verziere di Milano. Fonte: <i>Ivo Soli</i>, cit.</big></big></center><br>
+<p><center><big><big>Soli intento a modellare, nel 1965, il monumento a Carlo Porta. Fonte: <i>Ivo Soli</i>, cit.</big></big></center><br>
 	<img src="img/celebri vignolesi/Soli Ivo/monumento.jpg" width="400" height="600"><br><br>
-<p><center><big><big>Monumento a Carlo Porta, bronzo.</big></big></center><br>
+<p><center><big><big>Monumento a Carlo Porta (1966), bronzo. Milano, Verziere.</big></big></center><br>
 	<img src="img/FOTO VARIE/monumento.jpg" width="450" height="850"><br><br><br>
 <p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></big></strong></p><br>
 </section>
