--- a/giugno.html
+++ b/giugno.html
@@ -80,7 +80,7 @@ Nell’immagine sottostante, l’<i>Autoritratto</i> di Giuseppe Maria Soli (il 
 <p class="index-p3"><strong>25 giugno 1959</strong>: morì a Vignola <strong>UGO ROLI</strong>, educatore, scrittore, poeta, studioso di storia (anche locale), avvocato, funzionario pubblico ed enigmografo.<br><br>
 Nato a Vignola il 23 febbraio 1887, Ugo Roli svolse dapprima la professione di maestro elementare e poi quella di avvocato.<br>
 Più volte decorato durante la Prima Guerra Mondiale, si distinse a livello nazionale come enigmografo (con lo pseudonimo di «Fiordaliso») e come autore di libri scolastici per le Scuole Elementari.<br>  
-Fu il primo presidente del Circolo Amicizia di Vignola e dedicò molti studi alla storia patria e alla storia della sua terra d’origine, anche se oggigiorno nel Modenese è ricordato in special modo per l’interessante attività di poeta (anche e, forse, soprattutto dialettale).</p>
+Fu il primo presidente del Circolo “Amicizia” di Vignola e dedicò molti studi alla storia patria e alla storia della sua terra d’origine, anche se oggigiorno nel Modenese è ricordato in special modo per l’interessante attività di poeta (anche e, forse, soprattutto dialettale).</p>
 <p>Nell’immagine sottostante, tomba​ di Ugo Roli e di alcuni familiari nel cimitero ​di Vignola.</p><br><br>
 <img src="img/celebri vignolesi/Roli Ugo/tomba intera.jpg" width="800" height="600"><br><br>
 <p><strong><big><center>Vuoi saperne di più su Ugo Roli?<br>Allora, visita il suo <a href="Roli.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></center></strong></p><br><br><br>
