--- a/Muratori.html
+++ b/Muratori.html
@@ -79,7 +79,7 @@
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/studiolo.jpg" width="350" height="600"><br><br><br>
 <center><big>La statua in gesso raffigurante Muratori eseguita nel 1847 dall’artista modenese Adeodato Malatesta (1806-1891).<br> È attualmente collocata nell’atrio della Villa Tosi Bellucci, dal 1916 Residenza Municipale di Vignola.</big></center><br>
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/Muratori.jpg" width="240" height="650"><br><br><br>
-<p><center><big>Ritratto di fantasia di Muratori, litografia realizzata nel 2021 dall’artista vignolese Domenico Simonini (n. 1952).<br> L’opera è stata eseguita per l’associazione Amici dell’Arte Vignola.</big></center></p>
+<p><center><big>Ritratto di fantasia di Muratori, litografia realizzata nel 2021 dall’artista vignolese Domenico Simonini (n. 1952).<br> L’opera è stata eseguita per l’Associazione “Amici dell’Arte Vignola”.</big></center></p>
 <img src="img/FOTO VARIE/Pippo.jpg" width="500" height="750"><br><br><br>
 <p><center><big>Facciata della Biblioteca Ambrosiana, a Milano.</big></center></p>
 <img src="img/FOTO VARIE/bibliotecaambrosiana.jpg" width="550" height="750"><br><br><br>
