--- a/Paradisi.html
+++ b/Paradisi.html
@@ -73,6 +73,8 @@ Quella di Paradisi fu una reazione ferma e circostanziata che, pur nella polemic
 <p><big><big><center>Busto di Agostino Paradisi <i>il Giovane</i> (1780), attribuito allo scultore romano<br> Bartolomeo Cavaceppi (1716 ca. - 1799); collezione privata.<br>
 Fonte: google.com</center></big></big></p>
 <img src="img/celebri vignolesi/Paradisi/Cavaceppi2.jpg" width="450" height="600"><br><br>
+<p><big><big><center>Ritratto di fantasia di Paradisi, litografia realizzata nel 2021 dall’artista vignolese Domenico Simonini (n. 1952).<br> L’opera è stata eseguita per il Circolo “Paradisi” di Vignola.</center></big></big></p>
+<img src="img/celebri vignolesi/Paradisi/paradisipippo.jpg" width="500" height="700"><br><br>
 <p><big><big><center>Palazzo Tirelli (già Palazzo Gabbi), Reggio Emilia, a lungo dimora di Paradisi. Fonte: google.com</center></big></big></p>
 <img src="img/celebri vignolesi/Paradisi/palazzo tirelli.jpg" width="470" height="700"><br><br>
 <p><big><big><center>Sede del Collegio Nazareno di Roma, in un’antica stampa<br> (il Collegio è tuttora accolto nel palazzo cinquecentesco in fondo).<br> 
