--- a/Novità.html
+++ b/Novità.html
@@ -40,7 +40,14 @@
  
 <strong>GIUSEPPE MARIA SOLI</strong>, architetto, pittore, insegnante e direttore di Accademia delle Belle Arti: <strong>200 ANNI DALLA MORTE</strong>.</big></p>
 <p><big>Nell’immagine, vista della rocca di Vignola da Via Zenzano in una fotografia scattata il 4 aprile 2022.</big></p><br>
-<img src="img/FOTO VARIE/rocca2.JPG" width="650" height="830"><br><br><br><br><br><br> 
+<img src="img/FOTO VARIE/rocca2.JPG" width="650" height="830"><br><br><br><br><br><br>
+	
+<p><big><big><span style="text-decoration: underline;">18 giugno 2022</span></big></big></p><br><br>
+<p><big>Qui di seguito, presentiamo l’<i>incipit</i> di <i><strong>LA RICCA E LA MENDICA</strong></i>, la settima favola di <i><strong>IL FAVOLEGGIATORE</strong></i>, raccolta pubblicata nel 1857 da <strong>Francesco Selmi</strong> (1817-1881):<br>  
+«Una gentile giovane soleva abitualmente tutte le mattine raccogliersi nel verde prato a cui metteva il giardino della sua villa, ed ivi, all’ombra degli alberi sorgenti qua e là, trattenevasi qualche ora, parte leggendo, parte contemplando, parte dilettandosi di pizzicare giulivamente l’arpa secondo che l’inspirava la fantasia.<br>
+Per un senteruolo che dal prato menava alla strada, entrarono un dì e salirono fino a lei una vecchia povera con a mano una fanciulla di otto anni, ambedue stremate assai e di aspetto compassionevole. Fermatesi a distanza rispettosa, la fanciulla intuonò colla sua limpida vociuzza una semplice cantilena di lode a Dio, con cui si argomentava la meschinella di compungere i cuori a pietà dell’avola sua. Era nata per il canto; laonde, quantunque incolta, formava certe note sì giuste e sì delicate che vibravano nell’interno di chi ascoltavala e ne commuovevano gli affetti. La gentil giovane la richiese della replica, e, presa l’arpa, fecesi per vezzo ad accompagnarla con accordi armonici piacendovisi oltremodo, non tanto come di cosa insolita, quanto perché ne provava una nuova dolcezza»<br>
+Per leggere integralmente questa favola, <a href="https://sarascaglioni.github.io/Celebri-Vignolesi/Favoleggiatore.html">clicca qui</a>.</big></p><br><br><br> 
+
 	
 <p><big><big><span style="text-decoration: underline;">1° giugno 2022</span></big></big></p><br><br>
 <p><big>Qui di seguito, presentiamo l’<i>incipit</i> di <i><strong>LA ROSA DELLE ALPI</strong></i>, la settima favola di <i><strong>IL FAVOLEGGIATORE</strong></i>, raccolta pubblicata nel 1857 da <strong>Francesco Selmi</strong> (1817-1881):<br>  
