--- a/Favoleggiatore.html
+++ b/Favoleggiatore.html
@@ -52,7 +52,7 @@
 
 <tr>
 <td><big><big><strong><a href="rosaalpi.html">9. La rosa delle alpi</a></strong></td>
-<td><big><big><strong><a href="ricca.html">10. La ricca e la mendica</a></strong></td></tr>
+<td><big><big><strong><a href="riccamendica.html">10. La ricca e la mendica</a></strong></td></tr>
 
 <tr>
 <td><big><big><strong><a href="civetta.html">11. La civetta in cattedra</a></strong></td>
