--- a/giugno.html
+++ b/giugno.html
@@ -67,7 +67,7 @@ Nell’immagine sottostante, Casimiro Bettelli nella prima maturità. Fonte: <st
 
 Di umili origini, Giuseppe Maria Soli mostrò già da bambino un eccezionale talento nel disegno. Grazie a mecenati e sostegni di varia natura, ricevette una lunga e approfondita formazione artistica dapprima a Bologna e poi a Roma.<br> 
 
-Stimatissimo dagli Este e dagli Austria-Este come da Napoleone, Soli ebbe una carriera lunga e fortunata che lo vide divenire uno dei più importanti architetti neoclassici italiani e un apprezzato pittore attivo in diversi centri della Penisola.<br>  
+Stimatissimo dagli Este e dagli Austria-Este come da Napoleone, Soli ebbe una carriera lunga e fortunata che lo vide divenire – fra l’altro – uno dei più importanti architetti neoclassici italiani e un apprezzato pittore attivo in diversi centri della Penisola.<br>  
 
 Nella natia Vignola, il nostro artista concepì l’elegante Casino – o Villa – Bellucci (poi, Tosi Bellucci), ora Residenza Municipale; anche se il progetto datava 1789, i lavori vennero iniziati molto probabilmente solo nel 1815 e furono conclusi tra il 1823 e il 1824. Alle decorazioni parietali dell’edificio provvide in massima parte il conterraneo <strong>Pietro Minghelli</strong> (1780-1822), già suo allievo all’Accademia di Belle Arti di Modena, istituto presso il quale Soli fu a lungo non solo direttore, ma anche docente di Architettura Civile, Disegno e Pittura. Dal 1867 è conservato in questo casino l’<i>Autoritratto</i> che Soli dipinse non prima del 1805.<br>  
 
