--- a/Muratori.html
+++ b/Muratori.html
@@ -85,7 +85,7 @@
 <img src="img/FOTO VARIE/bibliotecaambrosiana.jpg" width="550" height="750"><br><br><br>
 <p><center><big>Facciata della chiesa di Santa Maria della Pomposa.</big></center></p>
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/facciata.jpg" width="800" height="580"><br><br>
-<p><center><big>Parte esterna dell’Aedes Muratoriana in una fotografia recente scattata in Via della Pomposa, a Modena<br> (dietro Santa Maria della Pomposa). Si tratta della casa nella quale il celebre Vignolese abitò dal 1716 al 1750.</big></center></p>
+<p><center><big>Parte esterna dell’Aedes Muratoriana in una fotografia recente scattata in Via della Pomposa, a Modena<br> (dietro Santa Maria della Pomposa). Si tratta della canonica nella quale il celebre Vignolese abitò dal 1716 al 1750.</big></center></p>
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/aedes.jpg" width="450" height="600"><br><br>
 <p><center><big>Lapide che sormonta l’ingresso dell’Aedes Muratoriana. Ricorda la figura del celebre Vignolese.</big></center></p>
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/lapide.jpg" width="650" height="530"><br><br>
