--- a/Redorici Roffi.html
+++ b/Redorici Roffi.html
@@ -43,6 +43,11 @@ La signora morì a Vignola il 25 aprile 2010. Fu inumata nel cimitero di Campigl
 Il 5 novembre 2011 le venne intitolato il Museo Civico che aveva contribuito a fondare, allestire, conservare, accrescere e valorizzare.</p><br><br>
 <h5><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></h5><br>
 
+<p><center><big>Una giovane Redorici Roffi fotografata a Tavernelle.<br>
+Fonte: Augusta Redorici Roffi - Maria Grazia Grilli, <i>Il molino di Campiglio e il molino di Tavernelle,<br>  
+in Giampaolo Grandi (a cura di), Con la Forza dell’Acqua. Storie d’acque, di opifici, di lavoro e di uomini<br> sul Canale di Marano, di S. Pietro, del Diamante, sul Canalino Castellano, sul Torbido</i>,<br> 
+progetto editoriale del Gruppo di Documentazione Vignolese “Mezaluna - Mario Menabue”,<br> Savignano s.P., Tipolitografia FG, 2010, pp. 107-122: 115.</big></center></p>
+<img src="img/celebri vignolesi/Redorici Roffi Augusta/giovane.jpg" width="650" height="700"><br><br>	
 <p><center><big>La Redorici Roffi in un primo piano tratto dal volantino che informava degli eventi pubblici organizzati in suo ricordo,<br> a un anno e mezzo dalla scomparsa, e culminanti nell’intitolazione a lei del Museo Civico di Vignola (5 novembre 2011).</big></center></p>
 <img src="img/celebri vignolesi/Redorici Roffi Augusta/foto e firma.jpg" width="550" height="600"><br><br>
 <p><center><big>La prima di copertina di uno dei libri scritti dalla Redorici Roffi:<br> <i>Le Chiese di Campiglio. Memoria</i>, Vignola, Libreria “dei Contrari”, 2000.</big></center></p>
