--- a/Redorici Roffi.html
+++ b/Redorici Roffi.html
@@ -44,9 +44,9 @@ Il 5 novembre 2011 le venne intitolato il Museo Civico che aveva contribuito a f
 <h5><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></h5><br>
 
 <p><center><big>Una giovane Redorici Roffi fotografata a Tavernelle.<br>
-Fonte: Augusta Redorici Roffi - Maria Grazia Grilli, <i>Il molino di Campiglio e il molino di Tavernelle,<br>  
-in Giampaolo Grandi (a cura di), Con la Forza dell’Acqua. Storie d’acque, di opifici, di lavoro e di uomini<br> sul Canale di Marano, di S. Pietro, del Diamante, sul Canalino Castellano, sul Torbido</i>,<br> 
-progetto editoriale del Gruppo di Documentazione Vignolese “Mezaluna - Mario Menabue”,<br> Savignano s.P., Tipolitografia FG, 2010, pp. 107-122: 115.</big></center></p>
+Fonte: Augusta Redorici Roffi - Maria Grazia Grilli, <i>Il molino di Campiglio e il molino di Tavernelle</i>,<br>  
+in Giampaolo Grandi (a cura di), <i>Con la Forza dell’Acqua. Storie d’acque, di opifici, di lavoro e di uomini<br> sul Canale di Marano, di S. Pietro, del Diamante, sul Canalino Castellano, sul Torbido</i>,<br> 
+progetto editoriale del Gruppo di Documentazione Vignolese “Mezaluna - Mario Menabue”,<br> Savignano s.P., Tipolitografia F.G., 2010, pp. 107-122: 115.</big></center></p>
 <img src="img/celebri vignolesi/Redorici Roffi Augusta/giovane.jpg" width="650" height="700"><br><br>	
 <p><center><big>La Redorici Roffi in un primo piano tratto dal volantino che informava degli eventi pubblici organizzati in suo ricordo,<br> a un anno e mezzo dalla scomparsa, e culminanti nell’intitolazione a lei del Museo Civico di Vignola (5 novembre 2011).</big></center></p>
 <img src="img/celebri vignolesi/Redorici Roffi Augusta/foto e firma.jpg" width="550" height="600"><br><br>
