--- a/Plessi1.html
+++ b/Plessi1.html
@@ -33,7 +33,7 @@
 	<big>(1824-1907)</big></center></h3><br><br><br>
 	<h4><big><big><big><big><strong><center>PROFILO BIOGRAFICO</center></strong></big></big></big></big></h4><br><br><br>
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
-<p><center><big><big>Alessandro Plessi e il figlio Renato nella Biblioteca Comunale di Vignola,<br> allora situata in un’ampia sala del primo piano della rocca (foto risalente al 1900 ca.).<br> Fonte: Raccolta famiglia Plessi.</big></big></center><br>
+<p><center><big><big>Alessandro Plessi e il figlio Renato (1878-1954) nella Biblioteca Comunale di Vignola,<br> allora situata in un’ampia sala del primo piano della rocca (foto risalente al 1891).<br> Fonte: Raccolta famiglia Plessi.</big></big></center><br>
 <img src="img/celebri vignolesi/Plessi Alessandro/biblioteca.jpg" width="750" height="550"><br><br><br>
 	<center><big><big><i>Istorie vignolesi narrate a’ suoi figli da Alessandro Plessi</i>, Vignola, Tipografia di Antonio Monti, s.d. [ma: 1885].</center></big></big><br>
 <img src="img/celebri vignolesi/Plessi Alessandro/Istorie.jpg" width="450" height="600"><br><br><br>
