--- a/Roli.html
+++ b/Roli.html
@@ -43,7 +43,7 @@ Durante la vita, il nostro personaggio, nella sua terra d’origine, era apprezz
 Roli morì a Vignola il 25 giugno 1959.</big></p><br><br><br>
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
 	
-<p><center><big><big>Fotografia che ritrae Roli nella prima maturità.</big></big></center><br>
+<p><center><big><big>Fotografia che ritrae Roli nella prima maturità. Fonte: google.com</big></big></center><br>
 <center><img src="img/celebri vignolesi/Roli Ugo/roligiovane.jpg" width="500" height="680"></center><br><br>	
 	<p><center><big><big>Frontespizio di <i>Faléster dl’Inféren</i> (1951), opera in versi (dialettali e italiani) di Roli.</big></big></center><br>
 		<center><img src="img/celebri vignolesi/Roli Ugo/libro.jpg" width="500" height="700"></center><br><br>
