--- a/Bernardoni.html
+++ b/Bernardoni.html
@@ -34,6 +34,7 @@
 	<h4><big><big><big><big><strong><center>PROFILO BIOGRAFICO</center></strong></big></big></big></big></h4><br><br>
 	<p></p>
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
+	<img src="img/celebri vignolesi/Bernardoni/Incisione.jpg" width="450" height="770"><br><br><br>
 <p><center><big><big>Casa natale di Bernardoni lungo la via che attualmente reca il suo nome.</big></center></p>
 <img src="img/celebri vignolesi/Bernardoni/casa.jpg" width="750" height="550"><br><br><br>
 <center><big>Lapide collocata sopra la porta di ingresso della casa natale di Bernardoni.<br> Il 1° luglio 1672, in realtà, è il giorno del battesimo di questo importante personaggio.</big></center><br>
