--- a/Muratori.html
+++ b/Muratori.html
@@ -73,12 +73,14 @@
 <p><big><i>Della Carità Cristiana, in quanto essa è Amore del Prossimo, Trattato Morale di Lodovico Antonio Muratori</i> [...], In Modena, Per Bartolomeo Soliani Stampatore Ducale, 1723, p. 227 (cap. XXII).</big></p><br><br><br>
  	
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
+<p><center><big><big>La statua in gesso raffigurante Muratori eseguita nel 1847 dall’artista modenese Adeodato Malatesta (1806-1891).<br> È attualmente collocata nell’atrio della Villa Tosi Bellucci, dal 1916 Residenza Municipale di Vignola.</big></center></p><br>
+<img src="img/celebri vignolesi/Muratori Lodovico Antonio/Muratori.jpg" width="240" height="650"><br><br><br>
+<p><center><big>C.A. [Claudio Artaria (1818-1872)], ritratto postumo di Lodovico Antonio Muratori, incisione, a partire dal ritratto esistente nella Venerabile<br> Biblioteca Ambrosiana di Milano. Fonte: <i>Iconografia dei celebri vignolesi. Opera edita per cura di Francesco Selmi</i>, Modena, A spese di<br> Giuseppe Lupi librajo, 1839. Il piccolo libro in oggetto è una pubblicazione periodica di natura collettiva costituita di sette dispense singole (le quali presentano in alcuni casi note tipografiche parzialmente diverse da quelle che si trovano nel volumetto rilegato, ad esempio «Presso il libraio Giuseppe Luppi»; quest’ultimo, peraltro, risulta il nome corretto del libraio modenese), così intitolate: <i>Jacopo Cantelli</i>, <i>Lodovico Antonio Muratori</i>, <i>Jacopo Barozzi da Vignola</i>, <i>Pietro Antonio Bernardoni</i>, <i>Agostino Paradisi</i>, <i>Giuseppe Soli</i>, <i>Veronica Cantelli Tagliazucchi</i>. L’incisione di Artaria apre la dispensa su Muratori, il cui testo scritto è firmato in calce da Gianfrancesco Galeani Napione.</big></center><br>
+<img src="img/celebri vignolesi/Muratori Lodovico Antonio/Muratori incisione.jpg" width="450" height="770"><br><br><br>	
 <p><center><big><big>Casa natale del grande storico ed erudito situata fra le attuali Vie Selmi e Muratori. È Monumento Nazionale dal 1940.</big></big></center><br>
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/casa natale esterna.jpg" width="700" height="500"></p><br><br>
 <center><big><big>Camera natale (o studiolo) di Muratori, particolare.<br> Foto scattata il 15 febbraio 2020, in occasione della sua riapertura al pubblico.</big></center><br>
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/studiolo.jpg" width="350" height="600"><br><br><br>
-<center><big>La statua in gesso raffigurante Muratori eseguita nel 1847 dall’artista modenese Adeodato Malatesta (1806-1891).<br> È attualmente collocata nell’atrio della Villa Tosi Bellucci, dal 1916 Residenza Municipale di Vignola.</big></center><br>
-<img src="img/celebri vignolesi/Muratori Lodovico Antonio/Muratori.jpg" width="240" height="650"><br><br><br>
 <p><center><big>Ritratto di fantasia di Muratori, litografia realizzata nel 2021 dall’artista vignolese Domenico Simonini (n. 1952).<br> L’opera è stata eseguita per l’Associazione “Amici dell’Arte Vignola”.</big></center></p>
 <img src="img/FOTO VARIE/Pippo.jpg" width="500" height="750"><br><br><br>
 <p><center><big>Facciata della Biblioteca Ambrosiana, a Milano.</big></center></p>
