--- a/Selmi.html
+++ b/Selmi.html
@@ -109,7 +109,7 @@ Ad avviso dell’insigne Vignolese, infine, Dante condensava in sé le migliori 
 	<center><img src="img/celebri vignolesi/Selmi/dagherrotipo.jpg" width="480" height="750"></center><br><br><br>
 	<p><center><big>Dipinto a olio anonimo e senza data (probabilmente della seconda metà del 1859) raffigurante Selmi.<br>Oggi si trova a Modena, all’interno del Rettorato dell’Università di Modena e Reggio Emilia. Fonte: google.com</center></big></p>
 	<img src="img/celebri vignolesi/Selmi/ritratto.jpg" width="500" height="650"><br><br><br>
-	<p><center><big>Selmi all’apparente età di circa 47-48 anni. Fonte: Fondo archivistico Selmi.</big></center></p>
+	<p><center><big>Selmi all’apparente età di circa 47/48 anni. Fonte: Fondo archivistico Selmi.</big></center></p>
 	<img src="img/celebri vignolesi/Selmi/Selmi quarantacinquenne.jpg" width="500" height="700"><br><br><br>
 	<p><center><big>Ritratto di Selmi in età senile, incisione eseguita a partire da un disegno dell’artista laziale Dante Paolocci (1849-1926);<br> accompagna <i>Francesco Selmi</i>, necrologio anonimo uscito in «L’Illustrazione Italiana»,<br> 28 agosto 1881, t. II dell’annata, pp. 139-140, con l’immagine a p. 140. Fonte: google.com</big></center></p>
 	<center><img src="img/celebri vignolesi/Selmi/illustrazione.jpg" width="450" height="650"></center><br><br><br>
